owncloud-k8s/openldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
      - name: openldap
        image: osixia/openldap:1.5.0
        ports:
        - containerPort: 389
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
spec:
  ports:
  - port: 389
  selector:
    app: openldap
