owncloud-k8s/owncloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        image: owncloud:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud
spec:
  selector:
    app: owncloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
